--- a/Server/package.json
+++ b/Server/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "axios": "^1.3.5",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   }
 }
